<resources>
    <string name="app_name">haha</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="calendar_year_month_format">y년M월</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description_logos" />


    <string name="plus_plan_subject">할 일</string>
    <string name="plus_plan_context">할 일을 입력하세요</string>
    <string name="plus_plan_date">날짜</string>
    <string name="plus_plan_location">위치</string>
    <string name="plus_plan_repeat">반복</string>
    <string name="plus_plan_color">색상</string>
    <string name="plus_plan_memo">메모를 입력하세요</string>

    <string name="plus_plan_toolbar_text">할 일</string>
    <string name="plus_plan_notification">알림</string>
    <string name="plus_plan_delete">삭제</string>
    <string name="description_date">날짜아이콘</string>
    <string name="description_repeat">반복아이콘</string>
    <string name="description_bell">알람아이콘</string>
    <string name="description_color">색상아이콘</string>
    <string name="description_delete">삭제버튼</string>
    <string name="description_location">위치아이콘</string>
</resources>